--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ book:
     - modeling.qmd
     - infer.qmd
     - measures.qmd
+    - resampling.qmd
     - references.qmd
 
 bibliography: references.bib
