--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ book:
     - infer.qmd
     - measures.qmd
     - resampling.qmd
+    - tidymodels.qmd
     - references.qmd
 
 bibliography: references.bib
