--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ book:
     - measures.qmd
     - resampling.qmd
     - tidymodels.qmd
+    - resampling2.qmd
     - references.qmd
 
 bibliography: references.bib
