dodałem grid_search

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,6 +34,7 @@ book:
     - resampling2.qmd
     - comparison.qmd
     - tuning.qmd
+    - grid_search.qmd
     - references.qmd
 
 bibliography: references.bib
