--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,8 @@ book:
       Metody walidacji modeli statystycznych, Dariusz Majerek
     right: |
       Książka została napisana w <a href="https://quarto.org/">Quarto</a>
-  cover-image: logo2.png
-  favicon: logo2.png
+  favicon: cover.png
+  cover-image: cover.png  
   repo-url: https://github.com/dax44/ModelsValidation/
   repo-actions: [issue]
   sharing: [twitter]
